--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,6 +8,11 @@
 }
 
 .btn-primary{
+    color: #ffffff;
+    font-weight: 700px;
+    font-size: 20px;
+    border: 0;
+    padding: 18px 35px;
     background: #fd6e0A;
     height: 64px;
     border-radius: 5px;
@@ -26,10 +31,31 @@ nav{
 }
 nav ul {
     display: flex;
+    align-items: center;
 }
 nav li{
     list-style: none;
     margin-left: 50px ;
 }
 
-
+/* Banner */
+.banner{
+    margin: 0px 200px;
+    display: flex;
+    align-items: center;
+}
+.banner-subtitle{
+    font-weight: 600px;
+    font-size: 45px;
+    margin-bottom: 5px;
+}
+.banner-title{
+    font-weight: 700px;
+    font-size: 85px;
+    margin-bottom: 20px;
+}
+.banner-description{
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
